    This allows better diagnostic messages if the library cannot be loaded.
    Patch by Christian Ullrich.

  Bugfixes:
  - Missing check if Oracle data types can be converted to PostgreSQL types.
    This bug was introduced in 2.0.0.
  - When oracle_fdw is loaded, initializing background workers
    (e.g. for parallel query) failed with:
       ERROR:  invalid cache ID: 41

Version 2.0.0, released 2017-09-15
  Incompatible changes:
  - Remove the deprecated option "plan_costs", since it is not very useful and
    is a maintenance burden.  After an upgrade, tables with this option set
    should be updated with:
    ALTER FOREIGN TABLE ... OPTIONS (DROP plan_costs);

  Enhancements:
  - Push down 2-way inner joins in SELECT statements if all conditions
    can be pushed down.
    Patch by Tatsuro Yamada, courtesy of NTT OSS Center.

  Bugfixes:
  - oracle_fdw crashed on Windows if queries use a NULL parameter or
    an empty subselect.
    Report by PAscal Lemoy.
  - Reading "srid.map" sometimes caused errors even if everything was alright.
    Report by Paul Dziemiela, analysis by Christian Ullrich.
  - Don't push down expressions with CLOB column references.
    Because of Oracle's inability to use CLOB in SQL expressions,
    this could lead to errors like
       ORA-00932: inconsistent datatypes: expected - got CLOB
  - Fix bug in "pg_terminate_backend" handling.
    "pg_terminate_backend" (or SIGTERM) was not handled
    correctly, since neither the Oracle query was canceled nor did
    the backend terminate.
    Reported by Dmitry Chirkin.

Version 1.5.0, released 2016-08-05
  Enhancements:
  - Add table option "sample_percent" to ANALYZE very large tables
    This can speed up ANALYZE significantly.
    Idea by PAscal Lemoy.
  - Introduce a table option "prefetch" for the Oracle row prefetch count
    This can speed up foreign table scans.
    Per discussion with by PAscal Lemoy and Maurizio De Giorgi.
  - Push down arbitrary IN and NOT IN expressions